# clinic-appointment-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml
migrations/: constants.py
migrations/main/: env.py
migrations/main/commons/: columns.py
migrations/main/versions/: 0604983bfa67_create_user_table.py  889b360ea564_create_clinic_table.py
migrations/seed/: env.py
migrations/seed/versions/: f280fdf2d702_seed_super_admin.py
src/: app.py
src/auth/: __init__.py  auth_controller.py  auth_exceptions.py  auth_module.py  auth_service.py  constants.py  types.py
src/auth/commands/: __init__.py
src/auth/config/: __init__.py  auth_config.py  auth_config_module.py
src/auth/dto/: __init__.py  register_body_dto.py
src/auth/fastapi_dependencies/: __init__.py  access_token_validator.py
src/auth/models/: __init__.py  role_alchemy_model.py  user_alchemy_model.py  user_auth_alchemy_model.py  user_has_role_table.py
src/auth/queries/: __init__.py
src/auth/repositories/: __init__.py  user_alchemy_write_repository.py
src/clinic/: __init__.py  clinic_controller.py  clinic_exceptions.py  clinic_module.py  constants.py  types.py
src/clinic/commands/: __init__.py
src/clinic/dto/: __init__.py  create_appointment_body_dto.py  create_clinic_body_dto.py  (+1 more)
src/fast_api/: __init__.py  exception_handlers.py  fastapi_module.py  fastapi_provider.py  response_envelope.py
src/shared/: __init__.py
src/sql_alchemy/: __init__.py  engine_provider.py  sql_alchemy_config.py  sql_alchemy_module.py
(+49 files in other folders)
